Fix bug where 'X' would flicker when hovered

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -104,5 +104,5 @@ aside {
     overflow-y: auto;
     height: 90%;
     flex-direction: column;
-    gap: 2px;
+    /* gap: 2px; */
 }
